style.css
:root {
    --color-primary: rgb(98, 191, 100);
    --color-neutral: rgb(223, 193, 153);
    --color-neautral-dark: #132407;
    --color-neutral-light: #f4ebeb;
    --orange500: rgb(255, 150, 84);

    --ff-primary: 'Playfair Display', Helvetica, Arial, sans-serif;
    --ff-secondary: 'Montserrat', Helvetica, Arial, sans-serif;
}

@font-face {
  font-display: swap;
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  src: url('./design/font/playfair-display-v40-latin-regular.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 700;
  src: url('./design/font/playfair-display-v40-latin-700.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 900;
  src: url('./design/font/playfair-display-v40-latin-900.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: url('./design/font/montserrat-v31-latin-regular.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 300;
  src: url('./design/font/montserrat-v31-latin-300.woff2') format('woff2');
}

.neutral-text {
  color: var(--color-neutral);
}
.prime-text {
  color: var(--color-primary)
}
.dark-text {
  color: var(--color-neautral-dark)
}
.light-text {
  color: var(--color-neutral-light)
}

.playfair {
  font-family: var(--ff-primary);
}

.montserrat {
  font-family: var(--ff-secondary);
}

.fw-700 {
  font-weight: 700;
}

/* reset */

*, *::before, *::after {
  box-sizing: border-box;
}

*:not(dialog) {
  margin: 0;
  padding: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

html, body {
  background: var(--color-neautral-dark);
}

body {
  background: linear-gradient(180deg,rgba(87, 115, 68, 1) 0%, rgba(47, 69, 33, 1) 14%, rgba(37, 57, 24, 1) 31%, rgba(29, 47, 16, 1) 48%, rgba(19, 36, 7, 1) 100%);
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  font-family: var(--ff-primary);
  font-variant-numeric: tabular-nums lining-nums;
}

/* section {
  height: 100vh;
} */

img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

input, button, textarea, select {
  font: inherit;
}

button {
  background-color: transparent;
  border: 1px solid transparent;
}

p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}

h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/* new round */

.new-round__container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  overflow: hidden;
}

.new-round__img {
  font-size: 6rem;
}

.new-round-header {
  font-size: 2.2rem;
  transform: scaleY(1.5);
  font-weight: 900;
}

.new-round__container p {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

/* table style */

.new-round__table-container {
  width: 85%;
  border-radius: 0.5rem;
  border: 1px solid var(--color-neutral-light);
  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
  margin-block: 1rem;
}

.new-round__table-header {
  background-color: var(--color-neutral-light);
  text-align: left;
  padding: 0.3rem 3rem;
  border-radius: 0.3rem 0.3rem 0 0;
  font-size: 1.2rem;
  letter-spacing: 0.2rem;
}

.new-round__table-row, .new-round__add-player {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 4fr 2fr;
  padding-block: 0.6rem;
  align-items: center;
}

.new-round__table-row {
  color: var(--color-neutral-light);
  font-weight: 700;
}


.new-round__add-player {
  background-color: transparent;
  border-radius: 0 0 0.5rem 0.5rem;
  font-weight: 700;
}

.id-cell {
  text-align: center;
}

.button-cell{ 
  padding-inline-end: 1.5rem;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 1rem;
}

.name-cell input {
  padding-inline-start: 0.5rem;
  width: 10rem;
}

.add-player {
  font-size: 1.2rem;
  letter-spacing: 0.2rem;
}

.button-cell.add-player button {
  background-color: var(--color-primary);
  background-image: linear-gradient(to bottom, rgb(183, 198, 183), rgb(98, 191, 100) 30%);
  border: 1px solid var(--color-primary);
  height: 1.6rem;
  width: 1.6rem;
  border-radius: 5rem;
  font-size: 1.5rem;
  line-height: 0;
  padding-block-end: 0.25rem;
  color: white;
}

.new-round__table-row:nth-last-of-type(2n) {
  background-color: #c65a1e;

}
.new-round__table-row:nth-last-of-type(2n + 1) {
  background-color: #a94d19

}

.confirm-player-button {
  font-size: 1.5rem;
  line-height: 0;
  color: var(--color-primary);
}

/* mode switch */

.new-round__mode-change-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-content: center;
  width: 80%;

}

.switch-container {
  display: flex;
  justify-content: right;
}

.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 28px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5rem;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  border-radius: 5rem;
  left: 4px;
  bottom: 4px;
  background-color: var(--color-neutral-light);
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: var(--color-primary);
}

input:checked + .slider:before {
  -webkit-transform: translateX(20px);
  -ms-transform: translateX(20px);
  transform: translateX(20px);
}
/* ... */

